--- a/adjbreaks.html
+++ b/adjbreaks.html
@@ -121,7 +121,8 @@
         • ${rooms} rooms × 3 judges = ${(rooms) * 3}<br>
         <br><br>
 
-        <i>Note: This includes only the open break and may include members of the CAP (Core Adjudication Panel) Adj break = adj score = diversity .</i>
+        <i>Note: This may include members of the CAP (Core Adjudication Panel) 
+        Adj break = adj score + diversity .</i>
       `;
 
       document.getElementById("output").innerHTML = resultHTML;
